--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,29 +1,34 @@
 .card {
+  width: 100%;
+  display: flex;
   perspective: 1000px;
+  justify-content: center;
 }
 
 .card-inner {
   border: solid 2px #272727;
   text-align: center;
   position: relative;
-  width: 100%;
   height: 100%;
-  min-height: inherit;
-  padding: 1rem;
-  width: 400px;
+  padding: 1rem 1rem 2rem 1rem;
   text-align: center;
   border-radius: 10px;
-  min-height: 300px;
+  min-height: 450px;
   transition: transform 0.6s;
   transform-style: preserve-3d;
   z-index: 100;
+  width: 400px;
 }
 
 .card__heading {
   margin: 1rem 0 2rem 0;
   display: block;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.8rem;
+}
+
+.card__footer {
+  padding: 1rem;
 }
 
 .card__image {
@@ -31,6 +36,7 @@
   align-items: center;
   justify-content: center;
   height: 200px;
+  width: 100%;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -55,8 +61,22 @@
   top: 0;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .card__back {
   transform: rotateY(180deg);
+}
+
+.card__back-info {
+  text-align: left;
+  padding: 1rem;
+}
+
+@media (min-width: 767px) {
+  .card {
+    width: auto;
+  }
 }
