--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  height: 100vh;
   font-family: "Oswald", sans-serif;
   background-color: rgb(32, 32, 32);
   background-image: linear-gradient(
@@ -29,4 +30,23 @@ body {
 
 p {
   color: #ffffff;
+}
+
+footer a {
+  color: #000;
+}
+
+footer p {
+  color: #000;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+}
+
+@media (min-width: 992px) {
+  footer {
+    bottom: 10%;
+  }
 }
