--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -2,6 +2,7 @@
   padding: 1rem;
   position: relative;
   height: 100vh;
+  overflow: hidden;
 }
 
 .container-bg-angle::before {
@@ -11,7 +12,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  height: 30%;
+  height: 80%;
   width: 100%;
   transform: skewY(350deg);
 }
@@ -26,11 +27,6 @@
 .heading-bold {
   font-size: 4rem;
   text-transform: uppercase;
-
-  transform: rotate(-90deg);
-  transform-origin: top right;
-  position: absolute;
-  top: 100px;
   margin: 0;
   right: 100%;
   white-space: nowrap;
@@ -42,8 +38,15 @@
   -webkit-background-clip: text;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 992px) {
+  .container-bg-angle::before {
+    height: 30%;
+  }
   .heading-bold {
+    transform: rotate(-90deg);
+    transform-origin: top right;
+    position: absolute;
+    top: 100px;
     font-size: 8rem;
   }
 }
