--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -24,6 +24,10 @@
   height: 100%;
 }
 
+.container-100 {
+  height: 100vh;
+}
+
 .heading-bold {
   font-size: 4rem;
   text-transform: uppercase;
@@ -48,5 +52,38 @@
     position: absolute;
     top: 100px;
     font-size: 8rem;
+  }
+}
+
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
   }
 }
