--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -56,7 +56,7 @@
   background-color: #131212;
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   left: 0;
   top: 0;
   -webkit-backface-visibility: hidden;
